Adicionando conteudo em validacao

--- a/trabalho.tex
+++ b/trabalho.tex
@@ -13,6 +13,8 @@
 \usepackage{multicol}
 \usepackage{framed}
 \usepackage{multirow}
+\usepackage{longtable}
+\usepackage{graphicx}
 \usepackage[normalem]{ulem}
 \useunder{\uline}{\ul}{}
 % O comando abaixo define o diretorio onde devem ser colocadas as imagens.
