Adicionando conclusao e colocando nome do prof. na capa

--- a/capa.tex
+++ b/capa.tex
@@ -5,7 +5,7 @@
     	%logotipo
                \includegraphics[scale=0.3]{brasao_ufba} \\
 	%\vspace{0.7in}
-              \centering{ 
+              \centering{
 	      \bf{
 	      \LARGE{
 		\uppercase{UNIVERSIDADE FEDERAL DA BAHIA} \\
@@ -13,7 +13,10 @@
 	      \Large {
                    	\uppercase{FACULDADE DE ADMINISTRAÇÃO} \\
 	      }
-                   
+        \Large {
+                   	\uppercase{PROF. CARLOS KHOURY} \\
+	      }
+
               } }
    \end{center}
    \vfill
@@ -44,7 +47,6 @@
 
 \end{titlepage}
 
-%comando abaixo cria uma capa redundante, mas como a capa com brasão foi 
+%comando abaixo cria uma capa redundante, mas como a capa com brasão foi
 % feita 'manualmente', não faz sentido usar este comando:
 %\capa
-
