--- a/conclusao.tex
+++ b/conclusao.tex
@@ -1,3 +1,20 @@
 \chapter{Conclusão}
 \label{cap:conclusao}
 
+A mortalidade infantil é um problema bastante sério que afeta diretamente na saúde da população.
+Ela pode ser verificada mais acentuadamente em regiões mais pobres, devido à falta de assistência, deficiência
+hospitalar, contaminação de alimentos e água, etc.
+
+O resultado deste trabalho corrobora o de alguns anteriores, como o de \cite{teixeira2011analise}, que
+discorre sobre o impacto da cobertura de esgotamento sanitário na taxa de mortalidade infantil. Discorremos
+sobre a relação inversa entre a porcentagem de cobertura de esgotamento sanitário e a taxa de mortalidade
+infantil.
+
+Existem evidências para que possamos aceitar o modelo como estatisticamente adequado nos quesitos de
+significância dos coeficientes das variáveis independentes da regressão (As estatísticas t e F para o seu
+conjunto possuem indícios de validade a 95\% de confiança), homocedasticidade e normalidade.
+
+Este trabalho serve de incentivo para estudos maiores e robustos sobre o tema, utilizando amostras
+mais representativas da população brasileira e técnicas estatísticas eficientes para oferecer respostas
+completas sobre a questão da mortalidade infantil, suas causas e consequências; e no futuro contribuir
+para ações governamentais com impactos mais contundentes no problema.
