--- a/trabalho.bib
+++ b/trabalho.bib
@@ -1,3 +1,14 @@
+@article{teixeira2011analise,
+  title={Análise da associação entre saneamento e saúde nos estados brasileiros--estudo comparativo entre 2001 e 2006},
+  author={Teixeira, Júlio César and Gomes, Maria Helena Rodrigues and Souza, Janaina Azevedo de},
+  journal={Revista de Engenheira Sanitária e Ambiental},
+  volume={16},
+  number={2},
+  pages={197--204},
+  year={2011},
+  publisher={SciELO Brasil}
+}
+
 @Misc{meupossante,
 	title = "{Meu Possante}",
 	author = "José {Lucas} dos Santos Borges",
