Adicionando coisas em desenvolvimento

--- a/desenvolvimento.tex
+++ b/desenvolvimento.tex
@@ -1,8 +1,8 @@
 \chapter{Desenvolvimento da regressão múltipla}
-\label{ref:desenvolvimento}
 Foi feita uma análise de regressão linear múltipla sobre os valores da taxa de mortalidade infantil (menores de 1 ano) por 1000 nascidos - variável dependente -, da proporção
 da população servida por esgotamento sanitário e pela proporção da população servida por coleta de lixo - variáveis independentes - a partir dos dados de todos os estados brasileiros
-e do Distrito Federal. A regressão é apresentada abaixo, com $\alpha$ = 0.5:
+e do Distrito Federal. Os dados foram retirados do site do IDB \cite{idb} e são referentes ao ano de 2011. A regressão é apresentada abaixo, com $\alpha$ = 0.5:
+\newline
 \begin{table}[h]
 \centering
 \resizebox{\textwidth}{!}{%
@@ -40,7 +40,7 @@ Tocantins           & 19.3                                              & 37.13 
 }
 \end{table}
 
-\begin{table}[h]
+\begin{table}[H]
 \centering
 \resizebox{\textwidth}{!}{%
 \begin{tabular}{|l|c|c|c|c|c|c|}
