--- a/trabalho.tex
+++ b/trabalho.tex
@@ -16,6 +16,7 @@
 \usepackage{longtable}
 \usepackage{graphicx}
 \usepackage[normalem]{ulem}
+\usepackage{float}
 \useunder{\uline}{\ul}{}
 % O comando abaixo define o diretorio onde devem ser colocadas as imagens.
 % Neste caso o diretorio é ./imagens/
