--- a/trabalho.bib
+++ b/trabalho.bib
@@ -1,3 +1,4 @@
+
 @article{teixeira2011analise,
   title={Análise da associação entre saneamento e saúde nos estados brasileiros--estudo comparativo entre 2001 e 2006},
   author={Teixeira, Júlio César and Gomes, Maria Helena Rodrigues and Souza, Janaina Azevedo de},
@@ -9,462 +10,25 @@
   publisher={SciELO Brasil}
 }
 
-@Misc{meupossante,
-	title = "{Meu Possante}",
-	author = "José {Lucas} dos Santos Borges",
-  year= 2016,
-	url = "https://github.com/genjiff/meupossante",
-  note = "Último acesso em 30 de Agosto de 2016"
+@Misc{idb,
+  title = "Indicadores e Dados Básicos",
+  author = "{Brasil - Ministério da Saúde}",
+  year = "2012",
+  url = "http://tabnet.datasus.gov.br/cgi/idb2012/matriz.htm",
+  note = "Último acesso em 12 de Setembro de 2016"
 }
 
-@article{bailey2006need,
-  title={On the need for attention-aware systems: Measuring effects of interruption on task performance, error rate, and affective state},
-  author={Bailey, Brian P and Konstan, Joseph A},
-  journal={Computers in human behavior},
-  volume={22},
-  number={4},
-  pages={685--708},
-  year={2006},
-  publisher={Elsevier}
+@article{lansky2009mortalidade,
+  title={A mortalidade Infantil: tendências da mortalidade neonatal e pós-neonatal em 20 anos do SUS},
+  author={Lansky, S and França, E and Perpétuo, IH and Ishitane, I},
+  journal={Brasília (DF): MS},
+  year={2009}
 }
 
-@inproceedings{pielot2014situ,
-  title={An in-situ study of mobile phone notifications},
-  author={Pielot, Martin and Church, Karen and De Oliveira, Rodrigo},
-  booktitle={Proceedings of the 16th international conference on Human-computer interaction with mobile devices \& services},
-  pages={233--242},
-  year={2014},
-  organization={ACM}
-}
-
-@article{simon1971designing,
-  title={Designing organizations for an information-rich world},
-  author={Simon, Herbert A},
-  year={1971}
-}
-
-@techreport {distracted2014,
-  author = "{National Highway Traffic Safety Administration}",
-  title = {Distracted driving 2014},
-  year = {2014},
-  type = {Research Note},
-  number = {DOT HS 812 260},
-  address = {Washington, DC},
-  month = apr
-}
-
-@misc {cellphoneuse,
-  title = {Cell Phone Use And Distracted Driving Laws},
-	author = "{Colorado Official State Web Portal}",
-	url = "https://www.colorado.gov/pacific/sites/default/files/10-04CellPhoneDistractDriving\_Issue",
-	year = 2016,
-	note = "Último acesso em 30 de Agosto de 2016"
-}
-
-@misc{distracteddriving,
-	title = {Distracted Driving: State Laws},
-	author = "{Distraction.gov - Official US Government Website for Distracted Driving}",
-	url = "http://www.distraction.gov/stats-research-laws/state-laws.html",
-	year = 2016,
-	note = "Último acesso em 30 de Agosto de 2016"
-}
-
-@misc{swedendrive,
-	title = {Sweden: Talk, Text And Drive? OK},
-	author = "{The Register}",
-	url = "http://www.theregister.co.uk/2012/04/12/sweden\_not\_banning\_mobiles\_in\_cars/",
-	year = 2016,
-	note = "Último acesso em 30 de Agosto de 2016"
-}
-
-% Exemplos
-
-@inproceedings{santanna2003,
-      author =   "Cláudio Sant'Anna and Alessandro Garcia and Christina Chavez and Carlos Lucena and Arndt von Staa",
-      title =    "On the Reuse and Maintenance of Aspect-Oriented Software: An Assessment Framework",
-      journal =      "Proceedings of Brazilian Symposium on Software Engineering",
-      booktitle =    "Proceedings of Brazilian Symposium on Software Engineering",
-      pages   =      {19--34},
-      year =     2003
-}
-
-@article{DBLP:journals/tse/ChidamberK94,
-    author    = {Shyam R. Chidamber and Chris F. Kemerer},
-    title     = {A Metrics Suite for Object Oriented Design.},
-    journal   = {IEEE Trans. Software Eng.},
-    volume    = {20},
-    number    = {6},
-    year      = {1994},
-    pages     = {476-493},
-    ee        = {http://www.computer.org/tse/ts1994/e0476abs.htm},
-    bibsource = {DBLP, http://dblp.uni-trier.de}
-}
-
-@Phdthesis{flach2004,
-	author={Christina von Flach Garcia Chavez},
-	title={Um {Enfoque} baseado em {Modelos} para o {Design} {Orientado} a {Aspectos}},
-	school={Pontifícia Universidade Católica do Rio de Janeiro},
-    address={Rio de Janeiro},
-    month={abril},
-	year={2004},
-}
-
-@Mastersthesis{bittencourt2004,
-	author={João Ricardo de Bittencourt Menezes},
-	title={Um {Framework} para Criação de {Jogos} {Computadorizados} Multiplataforma},
-	school={Pontifícia Universidade Católica do Rio Grande do Sul},
-    address={Porto Alegre},
-	year={2004},
-}
-
-@Techreport{amr,
-	author={Arie van Deursen and Marius Marin and Leon Moonen},
-	title={Aspect Mining and Refactoring},
-	school={Delft University of Technology},
-        note={Software Evolution Research Laboratory},
-	year={2003},
-}
-
-@Techreport{reis2004,
-       title={Implementando Métricas para Medição de Código Fonte usando JAVACC},
-       author={Marcelo Luis Boudoux Reis and Glauco de Figueiredo Carneiro},
-       year=2004,
-       month="Novembro",
-       school={Universidade Salvador},
-}
-
-@Techreport{monteiro2004,
-	author={Miguel Pessoa Monteiro},
-	title={Catalogue of Refactorings for AspectJ},
-	school={Universidade do Minho},
-  address={Campus de Gualtar, 4710-057, Braga Portugal},
-	year={2004},
-}
-
-@Article{aop,
-	author = "Tzilla Elrad and Robert E. Filman and Atef Bader",
-	title  = "Aspect-Oriented Programming",
-	journal = "CACM: Communications of ACM",
-	volume = "44",
-	number = "10",
-	pages =		  {29--32},
-	month = "October",
-	year =         2001,
-	url =  "citeseer.ist.psu.edu/elrad01aspectoriented.html"
-}
-@Book{buschmann1996,
-	author =       "Frank Buschmann and Regine Meunier and Hans Rohnert and Peter Sommerlad and Michael Stal and Peter Sommerlad and Michael Sta",
-	title =        "Pattern-Oriented Software Architecture, Volume 1: A System of Patterns",
-	publisher =    "John Wiley e Sons Ltd.",
-	year =         1996,
-        pages= 476
-}
-
-@Book{beck2000,
-	author =       "Kent Beck",
-	title =        "Extreme Programming Explained: Embrace Change",
-	publisher =    "Addison-Wesley",
-	year =         2000
-}
-
-@Book{mcCabe,
-	author =       "Norman E Fenton and Shari Lawrence Pfleeger",
-	title =        "Software metrics : a rigorous and practical approach",
-	publisher =    "London ; Boston : PWS Pub.",
-	isbn = 1850322759,
-	year =         1997
-}
-
-@Book{kerievsky2004,
-	author =       "Joshua Kerievsky",
-	title =        "Refactoring to Patterns",
-	publisher =    "Addison-Wesley",
-	isbn = 0321213351,
-	pages = 400,
-	month = "agosto",
-	year =         2004
-}
-
-@Book{fowler2000,
-	author =       "Martin Fowler and Kent Beck and John Brant and William Opdyke and Don Roberts",
-	title =        "Refactoring: Improving the Design of Existing Code",
-	publisher =    "Addison-Wesley",
-	year =         2000
-}
-
-
-@Misc{aosd,
-      title = "{Aspect}-Oriented Software Development",
-      url= "http://aosd.net/",
-
-      year= 2005,
-      note = "Último acesso em 28 de Fevereiro de 2005"
-}
-
-@Misc{refaces,
-      author="Mauricio Bomfim Cruz Vieira",
-      title = "{Refaces}: refactoring to aspects",
-      url= "http://refaces.tigris.org/",
-      year= 2005,
-      note = "Último acesso em 28 de Fevereiro de 2005"
-}
-
-
-@Misc{WASP,
-	  title = "{I} {Workshop} Brasileiro de Desenvolvimento de Software Orientado a Aspectos",
-      year= 2005,
-	  url = "http://www.dcc.ufba.br/wasp2004",
-      note = "Último acesso em 28 de Fevereiro de 2005"
-}
-
-@Misc{java,
-	  title = "{The} Source for Java Technology",
-      year= 2005,
-	  url = "http://java.sun.com",
-          note = "Último acesso em 28 de Fevereiro de 2005"
-}
-
-@Misc{AspectBrowser,
-      year= 2005,
-	  title = "{AspectBrowser} for Eclipse",
-	  url = "http://www.cs.ucsd.edu/users/wgg/Software/AB/",
-          note = "Último acesso em 28 de Fevereiro de 2005"
-}
-
-@Misc{Eclipse,
-      year= 2005,
-	  title = "{Eclipse} IDE Project",
-	  url = "http://eclipse.org",
-          note = "Último acesso em 28 de Fevereiro de 2005"
-}
-
-@Misc{aspectj,
-      year= 2005,
-	  title = "{AspectJ} Project",
-	  url = "http://aspectj.org",
-          note = "Último acesso em 28 de Fevereiro de 2005"
-}
-
-@Misc{FEAT,
-      year= 2005,
-	author =       "Martin Robillard",
-	title =        "Feature Exploration \& Analisys Tool",
-	url =          "http://www.cs.ubc.ca/labs/spl/projects/feat/",
-	note =         "Último acesso em 28 de Fevereiro de 2005"
-}
-
-@Misc{jUnitDoclet,
-	title =        "{jUnitDoclet} test generation tool",
-	url =          "http://jUnitDoclet.org",
-	note =         "Último acesso em 28 de Fevereiro de 2005"
-}
-
-@Misc{jUnit,
-	title =        "{jUnit} Framework",
-	url =          "http://jUnit.org",
-	note =         "Último acesso em 28 de Fevereiro de 2005"
-}
-
-@Misc{amphibian,
-	title =        "Amphibian Game Engine Framework",
-	url =          "http://amphibian.sourceforge.net",
-	note =         "Último acesso em 28 de Fevereiro de 2005"
-}
-
-@Misc{laddad2003,
-	author =       "Ramnivas Laddad",
-	title =        "Aspect Oriented Refactoring Series",
-	url =          "http://www.theserverside.com",
-	note =         "Último acesso em 28 de Fevereiro de 2005",
-	year = 2003
-}
-
-@Article{fayad1997,
-  author =       "Mohamed Fayad and Douglas C. Schmidt",
-  title =        "Object Oriented Application Frameworks",
-  journal =      "Communications of the ACM",
-  volume=       40,
-  number=       10,
-  year =         1997
-}
-
-
-@book{aho,
- author = {Alfred V. Aho and Ravi Sethi and Jeffrey D. Ullman},
- title = {Compilers: principles, techniques, and tools},
- year = {1986},
- isbn = {0-201-10088-6},
- publisher = {Addison-Wesley Longman Publishing Co., Inc.},
- }
-
-@book{tanenbaum,
- author = {Andrew S. Tanenbaum},
- title = {Modern operating systems},
- year = {1992},
- isbn = {0-13-588187-0},
- publisher = {Prentice-Hall, Inc.},
- }
-
-@Book{ambler,
-  author = 	 "Scott W. Ambler",
-  title = 	  "Análise e Projeto Orientado a Objeto",
-  publisher = 	 "IBPI Press",
-  year = 	 1998,
-  address = "Rio de Janeiro"
-}
-
-@Article{mmcpp,
-  author = 	 "Nathan C. Mayers",
-  title = 	 "Memory Management in {C++}",
-  journal =  "C++ report",
-  year = 	 1993
-}
-
-@article{dynload,
- author = {James Norton},
- title = {Dynamic Class Loading in C++},
- journal = {Linux Journal},
- volume = {2000},
- number = {73es},
- year = {2000},
- issn = {1075-3583},
- pages = {38},
- publisher = {Specialized Systems Consultants, Inc.},
-}
-
-
-@Article{allocators,
-  author= "Matt Austern",
-  title = "What Are Allocators Good For?",
-  journal = "The C/C++ Users Journal",
-  year = 2002,
-  month = dec
-}
-
-@Misc{apache,
-  title = "{Apache} HTTP Server Version 1.3 Developer Resources",
-  url = "http://httpd.apache.org/dev",
-  note = "Último acesso em 12 de Junho de 2003"
-}
-
-@Misc{java,
-  title = "{The} Source for Java Technology",
-  url = "http://java.sun.com",
-  note = "Último acesso em 12 de Junho de 2003"
-}
-
-@Misc{jsp,
-  title = "JavaServer Pages Technology",
-  url = "http://java.sun.com/products/jsp/",
-  note = "Último acesso em 12 de Junho de 2003"
-}
-
-@Misc{php,
-  title = "{PHP} Hypertext Preprocessor",
-  url = "http://www.php.net",
-  note = "Último acesso em 12 de Junho de 2003"
-}
-
-@Misc{sf,
-  title = "{SourceForge}.net",
-  url = "http://sourceforge.net/",
-  note = "Último acesso em 12 de Junho de 2003"
-}
-
-@Misc{gpl,
-  title = "{The} GNU General Public License",
-  url = "http://www.gnu.org/licenses/gpl.html",
-  note = "Último acesso em 12 de Junho de 2003"
-}
-
-@Misc{huston,
-  title = "Huston Design Patterns",
-  author = "Vince Huston",
-  url = "http://home.earthlink.net/~huston2/dp/patterns.html",
-  note = "Último acesso em 12 de Junho de 2003"
-}
-
-@Book{GoF,
-  title = "Design Patterns: Elements of Reusable Object-Oriented Software",
-  author = "Erich Gamma and Richard Helm and Ralph Johnson and John Vlissides",
-  publisher = "Addison Wesley",
-  address = "Reading, MA",
-  year = 1995
-}
-
-
-@Misc{tplusplus,
-  title = "{Sítio} web do projeto T++",
-  url = "http://tplusplus.sourceforge.net/",
-  note = "Último acesso em 12 de Junho de 2003"
-}
-
-@Misc{webservices,
-  publisher = {Sun Microsystems},
-  title = {{The} Java WebServices Tutorial},
-  url = "http://java.sun.com/webservices/docs/1.1/tutorial/doc/"
-}
-
-@Misc{rfc-http,
-  publisher = {Internet Society},
-  title = {{Hypertext} Transfer Protocol Specification -- HTTP/1.1},
-  url = "ftp://ftp.rfc-editor.org/in-notes/rfc2616.txt"
-}
-
-@InProceedings{webmidia2003,
-  title = "The {T++} {Approach} to {Web} {Application} {Development}",
-  author = "Terceiro, Antonio Soares de Azevedo and Chavez, Christina von Flach Garcia",
-  booktitle = "Anais do Simpósio Brasileiro de Sistemas Multimídia e Web -- Workshop de Ferramentas e Aplicações",
-  year = 2003,
-  publisher = "Sociedade Brasileira de Computação",
-  address = "Salvador",
-  url = "http://twiki.im.ufba.br/pub/Aside/NossasPublicacoes/webmidia2003-terceiro.pdf"
-}
-
-@misc{patternsconcepts,
-  title = "Patterns and Software: Essential Concepts and Terminology",
-  author = "Brad Appleton",
-  url = "http://www.cmcrossroads.com/bradapp/docs/patterns-intro.html"
-}
-
-@article{riehle96understanding,
-    author = "Dirk Riehle and Heinz Zullighoven",
-    title = "Understanding and Using Patterns in Software Development",
-    journal = "Theory and Practice of Object Systems",
-    volume = "2",
-    number = "1",
-    pages = "3-13",
-    year = "1996",
-    url = "citeseer.nj.nec.com/riehle96understanding.html"
-}
-
-
-@inproceedings{srcoopsla2003,
- author = {Antonio Soares de Azevedo Terceiro},
- title = {Issues on {Building} {T++}, a {Tool} for {Web} {Application} {Development} with {C++}},
- booktitle = {Companion of the 18th annual ACM SIGPLAN conference on Object-oriented programming, systems, languages, and applications},
- year = {2003},
- isbn = {1-58113-751-6},
- pages = {394--395},
- location = {Anaheim, CA, USA},
- doi = {http://doi.acm.org/10.1145/949344.949452},
- publisher = {ACM Press},
- }
-
-@inproceedings{demooopsla2003,
- author = {Antonio Soares de Azevedo Terceiro and Christina von Flach G. Chavez},
- title = {Issues on {Building} {T++}: a {Tool} for {Web} {Application} {Development} with {C++}},
- booktitle = {Companion of the 18th annual ACM SIGPLAN conference on Object-oriented programming, systems, languages, and applications},
- year = {2003},
- isbn = {1-58113-751-6},
- pages = {106--107},
- location = {Anaheim, CA, USA},
- doi = {http://doi.acm.org/10.1145/949344.949372},
- publisher = {ACM Press},
- }
-
-@Misc{manualVisual,
-  title = "Manual de Identidade Visual",
-  url = "https://www.ufba.br/manual-de-identidade-visual",
-  note = "Último acesso em 2 de Julho de 2013"
+@article{frias2008politicas,
+  title={Políticas de saúde direcionadas às crianças brasileiras: breve histórico com enfoque na oferta de serviços de saúde},
+  journal={Ministério da Saúde, ed. Saúde Brasil},
+  author={Frias, Paulo Germano de and Mullachery, Pricila Honorato and Giugliani, Elsa Regina Justo},
+  volume={20},
+  year={2008}
 }
