--- a/trabalho.bib
+++ b/trabalho.bib
@@ -32,3 +32,11 @@
   volume={20},
   year={2008}
 }
+
+@Misc{ibgeMortalidade,
+  title = "População - Taxas de mortalidade infantil",
+  author = "{IBGE}",
+  year = "2016",
+  url = "http://brasilemsintese.ibge.gov.br/populacao/taxas-de-mortalidade-infantil.html",
+  note = "Último acesso em 12 de Setembro de 2016"
+}
