--- a/trabalho.bib
+++ b/trabalho.bib
@@ -18,6 +18,14 @@
   note = "Último acesso em 12 de Setembro de 2016"
 }
 
+@Misc{wessa,
+  title = "Free Statistics Software",
+  author = "Wessa, P.",
+  url = "http://www.wessa.net/",
+  year = "2015",
+  journal="Office for Research Development and Education"
+}
+
 @article{lansky2009mortalidade,
   title={A mortalidade Infantil: tendências da mortalidade neonatal e pós-neonatal em 20 anos do SUS},
   author={Lansky, S and França, E and Perpétuo, IH and Ishitane, I},
@@ -39,4 +47,24 @@
   year = "2016",
   url = "http://brasilemsintese.ibge.gov.br/populacao/taxas-de-mortalidade-infantil.html",
   note = "Último acesso em 12 de Setembro de 2016"
+}
+
+@article{libanio2005dimensao,
+  title={A dimensão da qualidade de água: avaliação da relação entre indicadores sociais, de disponibilidade hídrica, de saneamento e de saúde pública},
+  author={LIBÂNIO, Paulo Augusto Cunha and CHERNICHARO, CA de L and Nascimento, Nilo de Oliveira},
+  journal={Engenharia Sanitária e Ambiental},
+  volume={10},
+  number={3},
+  pages={219--228},
+  year={2005},
+  publisher={SciELO Brasil}
+}
+
+@inproceedings{costa2002indicadores,
+  title={Indicadores sanitários como sentinelas na prevenção e controle da mortalidade infantil-uma experiência utilizando o SISAGUA},
+  author={Costa, Silvano Silverio da and Brandão, Cristina Celia Silveira and Colosimo, Enrico Antônio and Héller, Léo and others},
+  booktitle={Congreso Interamericano de Ingeniería Sanitaria y Ambiental, 28},
+  pages={1--8},
+  year={2002},
+  organization={FEMISCA}
 }
