--- a/trabalho.tex
+++ b/trabalho.tex
@@ -28,7 +28,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newcommand{\meunome}{José Lucas dos Santos Borges, Luiz Felipe Rosário}
-\newcommand{\meutitulo}{Relações quantitativas dos indicadores sociais de pobreza e os índices de concentração de renda}
+\newcommand{\meutitulo}{Relação entre mortalidade infantil e indicadores sociais de pobreza}
 \newcommand{\meusubtitulo}{Um caso de aplicação da análise de regressão linear múltipla de dados dos Estados brasileiros}
 \newcommand{\meuano}{2016}
 \newcommand{\meuorientador}{\prof\ Carlos Khoury}
